--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@types/node": "^18.16.19",
     "@vueuse/core": "^10.2.1",
     "@vueuse/nuxt": "^10.2.1",
-    "nuxt": "^3.6.3"
+    "nuxt": "^3.6.3",
+    "primevue": "3.22.4",
+    "primeflex": "3.3.0",
+    "primeicons": "6.0.1"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
